test/parser/should_succeed/comments11.souc
import commens

{; comment ;}
main() = do
	print x
	; print 4

x = 4
