test/parser/should_fail/bindings2.souc
main() = do
	x = 3
	x = 4
	print x
